[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    'ExampleRepo @ git+ssh://git@github.com/jjueco/keras-yolo3.git',
]

[project.optional-dependencies]
dev = ['ExtraExample @ git+ssh://git@github.com/jjueco/keras-yolo3.git']
